// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/DropDown renders correctly 10 elements 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "width": 600,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          Object {
            "paddingBottom": 24,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 24,
          "borderWidth": 3,
          "flexDirection": "row",
          "height": 144,
          "justifyContent": "space-between",
          "marginBottom": 24,
          "opacity": 1,
          "paddingLeft": 54,
          "paddingRight": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 48,
              "lineHeight": 60,
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        2
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/DropDown renders correctly 10 elements disabled 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "width": 600,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          Object {
            "paddingBottom": 24,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D1D4DB",
          "borderColor": "transparent",
          "borderRadius": 24,
          "borderWidth": 3,
          "flexDirection": "row",
          "height": 144,
          "justifyContent": "space-between",
          "marginBottom": 24,
          "opacity": 1,
          "paddingLeft": 54,
          "paddingRight": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 48,
              "lineHeight": 60,
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/DropDown renders correctly 10 elements type valid 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "width": 600,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          Object {
            "paddingBottom": 24,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(43, 120, 238, 0.15)",
          "borderColor": "transparent",
          "borderRadius": 24,
          "borderWidth": 3,
          "flexDirection": "row",
          "height": 144,
          "justifyContent": "space-between",
          "marginBottom": 24,
          "opacity": 1,
          "paddingLeft": 54,
          "paddingRight": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 48,
              "lineHeight": 60,
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/DropDown renders correctly 10 elements type wrong 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "width": 400,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          Array [
            Object {
              "paddingBottom": 24,
            },
            Object {
              "paddingBottom": 8,
            },
          ],
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#000",
          "borderColor": "#000",
          "borderRadius": 24,
          "borderWidth": 3,
          "flexDirection": "row",
          "height": 70,
          "justifyContent": "space-between",
          "marginBottom": 24,
          "opacity": 1,
          "paddingLeft": 54,
          "paddingRight": 36,
          "width": 400,
        }
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 48,
              "lineHeight": 60,
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/DropDown renders correctly without array 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "width": 600,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          Object {
            "paddingBottom": 24,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 24,
          "borderWidth": 3,
          "flexDirection": "row",
          "height": 144,
          "justifyContent": "space-between",
          "marginBottom": 24,
          "opacity": 1,
          "paddingLeft": 54,
          "paddingRight": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 48,
              "lineHeight": 60,
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/DropDown renders correctly without array with text and font 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "width": 600,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          Object {
            "paddingBottom": 24,
          },
        ]
      }
    >
      Название поля
    </Text>
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#F54D3D",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          undefined,
        ]
      }
    >
      *
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 24,
          "borderWidth": 3,
          "flexDirection": "row",
          "height": 144,
          "justifyContent": "space-between",
          "marginBottom": 24,
          "opacity": 1,
          "paddingLeft": 54,
          "paddingRight": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 48,
              "lineHeight": 60,
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/DropDown selectItemClose 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "width": 400,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 42,
            "lineHeight": 54,
          },
          Object {
            "paddingBottom": 24,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#000",
          "borderColor": "#000",
          "borderRadius": 24,
          "borderWidth": 3,
          "flexDirection": "row",
          "height": 70,
          "justifyContent": "space-between",
          "marginBottom": 24,
          "opacity": 1,
          "paddingLeft": 54,
          "paddingRight": 36,
          "width": 400,
        }
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 48,
              "lineHeight": 60,
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          Object {
            "color": "#9BA1B0",
            "fontFamily": "Neotis",
            "fontSize": 48,
            "marginRight": 12,
          }
        }
      >
        
      </Text>
      <Text
        allowFontScaling={true}
        style={
          Array [
            Object {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 36,
              "lineHeight": 48,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        subtitle
      </Text>
    </View>
  </View>
</View>
`;
